Changelog
=========

5.8-dev - (unreleased)
----------------------

5.7 - (2014-09-15)
------------------
* Change: Made @@epub.support/can_download accessible from URL
  [voineali refs #20846]

5.6 - (2014-08-12)
------------------
* Bug fix: fixed tests
  [ghicaale refs #20451]

5.5 - (2014-08-12)
------------------
* Upgrade step: Assign "Can download ePub" permission to
  CommonEditor
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
* Change: Renamed epub_view to download.epub
  [voineali refs #20393]
* Feature: Added "Can download ePub" and "Can customize ePub" permissions
  [voineali refs #20436]

5.4 - (2014-07-15)
------------------
* Bug fix: Export to epub even if there is no PDF cover set for content-type
  [voineali refs #20268]
* Change: Removed collective.sendaspdf dependency
  [voineali refs #20268]

5.3 - (2014-06-06)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [voineali refs #19882]
* Change: Moved EPUB related images and actions from eea.soercontent package
  [voineali refs #19882]

5.2 - (2014-01-21)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Bug fix: Updated old URLs pointing Trac
  [ghicaale refs #18003]

5.1 - (2013-11-20)
------------------
* Bug fix: links were missing any style
  [simiamih refs #16799]

5.0 - (2013-10-22)
------------------
* Feature: improved epub - daviz reference, toc, styles, cover
  [simiamih refs #16799]

4.9 - (2013-10-07)
------------------
* Feature: major export improvements - image files, cover photo, css
  [simiamih refs #16799]

4.8 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.epub
  [ichimdav refs #15651]

4.7 - (2013-06-17)