@@ -1,13 +1,27 @@
 <?xml version="1.0"?>
 <object name="portal_actions">
  <action-provider name="portal_actions"/>
- <object name="document_actions">
+ <object name="document_actions" meta_type="CMF Action Category">
   <object name="download_as_epub" meta_type="CMF Action">
    <property name="title">Download as ePub</property>
    <property name="url_expr">string:$object_url/download.epub</property>
    <property name="available_expr">object/@@epub.support/can_download</property>
    <property
       name="icon_expr">string:$portal_url/++resource++eea.epub.images/download-epub.png</property>
+   <property name="permissions">
+    <element value="Can download ePub"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+ </object>
+ <object name="export_actions" meta_type="CMF Action Category">
+  <object name="download_as_epub" meta_type="CMF Action">
+   <property name="title">ePub</property>
+    <property name="description">Download as ePub</property>
+   <property name="url_expr">string:$object_url/download.epub</property>
+   <property name="available_expr">object/@@epub.support/can_download</property>
+   <property
+      name="icon_expr">string:eea-icon eea-icon-3x eea-icon-file-text-o</property>
    <property name="permissions">
     <element value="Can download ePub"/>
    </property>
