@@ -6,6 +6,19 @@
 
     <!-- 5.3 => 5.5 -->
     <genericsetup:upgradeSteps
+        source="5.5"
+        destination="5.8"
+        profile="eea.epub:default">
+
+        <genericsetup:upgradeDepends
+            title="Import steps with changes from eea.epub: actions"
+            import_steps="actions"
+            />
+
+    </genericsetup:upgradeSteps>
+
+    <!-- 5.3 => 5.5 -->
+    <genericsetup:upgradeSteps
         source="5.3"
         destination="5.5"
         profile="eea.epub:default">
